2009-07-23  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/list.py:
	* lib/pytis/presentation/types_.py:
	Disable folding when user sorting is active.

2009-07-23  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/list.py:
	Allow folding by mouse double clicking.

2009-07-22  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/commands_.py:
	* lib/pytis/form/list.py:
	Add single-level expand/collapse command.

2009-07-22  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/_grid.py:
	* lib/pytis/form/list.py:
	* lib/pytis/presentation/field.py:
	* lib/pytis/presentation/types_.py:
	Display folding indicators.

2009-07-21  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/_grid.py:
	* lib/pytis/presentation/__init__.py:
	* lib/pytis/presentation/field.py:
	* lib/pytis/presentation/types_.py:
	Pretty types introduced.

2009-07-20  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/list.py:
	Call refresh in FoldableForm.__init__.

2009-07-20  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/list.py:
	Folding fixes.

2009-06-30  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/commands_.py:
	* lib/pytis/form/form.py:
	* lib/pytis/form/list.py:
	New command FoldableForm.COMMAND_EXPAND_OR_COLLAPSE.

2009-06-29  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/list.py:
	Amend: yes.
	FoldableForm moved from form.py to list.pyFoldableForm moved from form.py to list.py
	
	

2009-06-29  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/form.py:
	* lib/pytis/form/list.py:
	FoldableForm moved from form.py to list.py.

2009-06-29  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/form.py:
	New method FoldableForm._Folding.expand_or_collapse.

2009-06-29  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/form.py:
	Substance of new class FoldableForm.

2009-06-29  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/data.py:
	* lib/pytis/data/postgresql.py:
	New data query operator LTreeMatch.

2009-06-29  Milan Zamazal  <pdm@brailcom.org>
