@@ -1,3 +1,9 @@
+2009-07-24  Milan Zamazal  <pdm@brailcom.org>
+
+	* lib/pytis/form/list.py:
+	* lib/pytis/presentation/types_.py:
+	Foldable search implemented.
+
 2009-07-23  Milan Zamazal  <pdm@brailcom.org>
 
 	* lib/pytis/form/list.py:
